# Tesseract

./: .clang-format  .editorconfig  .gitignore  BUILD.md  CMakeLists.txt  DOCUMENTATION.txt  Makefile  README.md  README.txt  TEMPORAL.md  build_tpm.bat  build_win.bat  dev-setup.sh  generate_pch.bat  language-configuration.json  loop_test.tesseract  package.json  run.bat  setup-linux.sh  tesser  test.tesseract  test_dev_env.sh  tpm
.github/workflows/: ci.yml
MyProject/: main.c
dev-tools/: build.sh  format.sh  lint.sh  memcheck.sh  profile.sh  run-tests.sh
docker/: Dockerfile.dev  docker-compose.dev.yml
docs/: BUILD.md  BURGER_README.md  CONTRIBUTING.md  LICENSE.md  PACKAGE_MANAGER.md  PACKAGE_SYSTEM.md  README.md
examples/: hello_world.tesseract
include/: ast.h  compat.h  error.h  interpreter.h  lexer.h  object.h  parser.h  tesseract_pch.h  tesseract_pch.h.gch  variables.h
include/src/: ast.c  interpreter.c  parser.c
lib/: math.tesseract
scripts/: build_win.bat
src/: ast.c  error.c  interpreter.c  lexer.c  main.c  parser.c  repl.c  variables.c
syntaxes/: tesseract.tmLanguage.json
tests/unit/: basic_test.tesseract
